# Ultimate_Kids_Curiousity_club

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  pytest.ini  temp_issue_body.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: wp0_prompt_enhancement.md
.github/workflows/: deploy-website.yml  test.yml
data/: README.md
data/audio/: README.md
docker/app/: Dockerfile
docker/distribution/: Dockerfile  server.py
docker/frontend/: Dockerfile  nginx.conf
docker/llm/: Dockerfile  entrypoint.sh
docker/tts/: Dockerfile  server.py
docs/: API.md  CONTENT_GUIDE.md  DEPENDENCY_GRAPH.md  DEPLOYMENT.md  DEVELOPMENT.md  MIGRATION_ASSESSMENT.md  ORCHESTRATOR.md  PLAN.md  PROGRESS.md  README.md  WP10a_QUICKREF.md  WP1_IMPLEMENTATION.md  WP9a_IMPLEMENTATION_SUMMARY.md  WP_REVIEW_QUESTIONS.md
docs/decisions/: 001-mock-first-architecture.md  002-provider-abstraction.md  003-prompt-enhancement-layer.md  004-character-schema.md  005-yaml-json-hybrid.md  007-hosting-provider.md  008-tts-upgrade-candidates.md  README.md
docs/testing/: REAL_API_TESTS.md  TESTING_GUIDE.md
docs/work_packages/: INTERFACES.md  README.md  WP0_Prompt_Enhancement.md  WP10_Website_Distribution.md  WP10a_Website.md  WP10b_Podcast_Distribution.md  WP1_Foundation.md  WP1a_Core_Models.md  WP1b_Configuration.md  WP1c_Blueprint_Manager.md  WP1d_Storage.md  WP1e_Testing.md  WP2_LLM_Service.md  WP2a_Provider_Ideation_Outline.md  WP2b_Segment_Script_Cost.md  WP3_TTS_Service.md  WP4_Audio_Mixer.md  WP5_Image_Service.md  WP6_Orchestrator.md  WP6a_State_Machine.md  WP6b_Reliability.md  WP7_CLI.md  WP7a_Show_Commands.md  WP7b_Episode_Commands.md  WP8_Testing.md  WP9_Dashboard.md  WP9a_Backend_API.md  WP9b_Blueprint_Editor.md  WP9c_Approval_Dashboard.md
examples/: llm_services_demo.py  prompt_enhancer_demo.py
scripts/: cleanup_old_wps.sh  create_issues.py  e2e_test.sh  generate_sitemap.py  quality_gate.py  validate_html.py  verify_deployment.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  config.py  main.py  models.py  websocket.py
src/cli/: __init__.py  config.py  episodes.py  factory.py  main.py  progress.py  publish.py  shows.py
src/models/: __init__.py  episode.py  publication.py  show.py  story.py
src/modules/: __init__.py  episode_storage.py  show_blueprint_manager.py
src/orchestrator/: __init__.py  approval.py  error_handler.py  events.py  pipeline.py  progress_tracker.py  result.py  transitions.py
src/services/: __init__.py  protocols.py
src/utils/: __init__.py  errors.py  validators.py
tests/: conftest.py  test_basic.py  test_config.py  test_episode_storage.py  test_errors.py  test_models.py  test_show_blueprint_manager.py  test_validators.py  test_website.py
tests/api/: README.md  conftest.py  run_api_tests.py  test_routes.py  test_websocket.py
tests/benchmarks/: __init__.py  test_performance.py
tests/cli/: __init__.py  conftest.py  test_cli_config.py  test_cli_episodes.py  test_cli_integration.py  test_cli_progress.py  test_publish.py
tests/fixtures/: __init__.py  audio.py  characters.py  episodes.py  models.py  services.py  validation.py
tests/integration/: __init__.py  test_audio_mixer_integration.py  test_e2e_pipeline.py  test_image_integration.py  test_llm_integration.py  test_pipeline_integration.py  test_tts_integration.py
tests/orchestrator/: __init__.py  conftest.py  test_approval_workflow.py  test_blueprint_integration.py  test_checkpointing.py  test_error_handling.py  test_pipeline_integration.py  test_pipeline_states.py  test_progress_tracking.py
tests/real_api/: __init__.py  test_llm_real.py  test_tts_real.py
tests/services/: __init__.py
tests/test_helpers/: fixture_loader.py
tests/unit/: __init__.py  test_character_fixtures.py  test_cost_tracker.py  test_episode_fixtures.py  test_episode_storage.py  test_errors.py  test_fixture_loader.py  test_prompt_enhancer.py  test_prompt_filters.py
tests/utils/: __init__.py  cost_tracker.py
website/: README.md  _headers  index.html  robots.txt  sitemap.xml
website/admin/: README.md  approve.html  approve.js  blueprint-editor.js  blueprint.html  dashboard.html  dashboard.js  episode.html  episode.js  index.html
(+144 files in other folders)
