[project]
name = "ultimate-kids-curiousity-club"
version = "0.1.0"
description = "An educational platform designed to inspire curiosity and learning in kids"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.5.0",
]
authors = [
    { name = "Kids Curiosity Club Team" }
]
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

