[project]
name = "ultimate-kids-curiousity-club"
version = "0.1.0"
description = "An educational platform designed to inspire curiosity and learning in kids"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "Pillow>=10.0.0",
    "pydub>=0.25.1",
    "pyloudnorm>=0.1.1",
    "mutagen>=1.47.0",
    "numpy>=1.24.0",
    "jinja2>=3.1.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "websockets>=12.0",
]
authors = [
    { name = "Kids Curiosity Club Team" }
]
license = { text = "MIT" }

[project.scripts]
kids-podcast = "cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-asyncio>=0.21.0",
    "pytest-benchmark>=4.0.0",
    "ruff>=0.3.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
    "httpx>=0.26.0",
]
tts = [
    "elevenlabs>=0.2.0",
    "google-cloud-texttospeech>=2.16.0",
    "openai>=1.12.0",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "tiktoken>=0.6.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
